# cs236-project-2

./: Automaton.h  CMakeLists.txt  CommentAutomaton.cpp  CommentAutomaton.h  DatalogProgram.cpp  DatalogProgram.h  IDAutomaton.cpp  IDAutomaton.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Rule.cpp  Rule.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  main.cpp  test.txt
